fixed GID issues
fixed GID so it will show up properly on the display

--- a/Kenwood ID Script/CHANGELOG
+++ b/Kenwood ID Script/CHANGELOG
@@ -1,5 +1,9 @@
 Kenwood ID script
 
+version 1.0.2
+
+fixed GID
+
 version 1.0.1
 
 added version information, changed a hard-coded assumption in the
