Changed IP address in packets to better reflect what I think should be sent.

--- a/Kenwood ID Script/CHANGELOG
+++ b/Kenwood ID Script/CHANGELOG
@@ -1,5 +1,9 @@
 Kenwood ID script
 
+version 1.0.3
+
+changed IP addresses in the packets to be what I think is more correct
+
 version 1.0.2
 
 fixed GID
